--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     </head>   
     <body>
         <header class="header">
-            
+
         </header>
+        <main>
+            
+        </main>
     </body> 
 </html>
